syntax = "proto3";

package auth;

option go_package = "/auth";

service AuthService {
  rpc Login (LoginRequest) returns (LoginResponse);
  rpc SendMessage (MessageRequest) returns (MessageResponse);
}

message LoginRequest {
  string username = 1;
  string password = 2;
}

message LoginResponse {
  string token = 1;
  string message = 2;
}

message MessageRequest {
  string token = 1;
  string message = 2;
}

message MessageResponse {
  string response = 1;
}
